--- a/order.html
+++ b/order.html
@@ -119,101 +119,216 @@
 
     <main class="main" id="main">
       <div class="hero__img">
-
-
         <section class="title__container">
-          <h1 class="title">Welcome to Fetta di Beatitudine</h1>
+          <h1 class="title">Online Order</h1>
           <article class="subtitle">
-            <p class="subtitle__text">where every bite of our artisan pizza is a journey to bliss.</p><p class="subtitle__text">Crafted
-            with love, fresh ingredients, and an Italian touch, we invite you to
-            savor the happiness in every slice.</p><p class="subtitle__text">Buon Appetito!"</p>
+            <p class="subtitle__text">
+              Here, you can easily place orders for delivery or pickup. Simply
+              fill out the form below or give us a call to enjoy our delicious
+              pizzas and other menu items from the comfort of your home.
+            </p>
           </article>
-
         </section>
         <section class="aside">
-          
-          <button class="aside__discount" onclick="location.href='discounts.html'">
-            Reserve a table!
+          <button
+            class="aside__discount"
+            onclick="location.href='#form__container'"
+          >
+            Make an order
           </button>
           <article class="aside__openinghours">
-            <p class="openinghours__title">Open every day from
-              15:00 - 24:00</p>
+            <p class="openinghours__title">Open every day from 15:00 - 24:00</p>
             <p class="openinghours__phone">+34 999 556 775</p>
           </article>
         </section>
       </div>
 
-      <section class="promotion">
-        <article class="promotion__left">
-          <h2 class="promotion__title">Special Offers : Opening PROMOTION!</h2>
-          <p class="promotion__text">
-            Our very special first discount 50%, only during first week of the
-            aperture
+      <section class="order__phone">
+        <h2 class="phone__title">Order by Phone</h2>
+
+        <article class="phone__left">
+          <p class="left__text">Open every day from 15:00 - 24:00</p>
+        </article>
+        <article class="phone__right">
+          <p class="right__text">Prefer to order by phone? No problem!</p>
+          <p class="right__text">
+            Call us at <span class="phone--bold">+34 999 556 775</span> and our friendly staff will assist you
+            with your order.
           </p>
         </article>
-        <article class="promotion__right">
-          <button class="discount" onclick="location.href='discounts.html'">
-            Get the discount
-          </button>
-        </article>
-        <img
-          src="./svg/game-icons_full-pizza.svg"
-          alt="pizza"
-          class="promotion__img"
-        />
       </section>
 
-      <section class="fixedimg">
-        <!-- <img
-          src="./img/avif/home-table_desktop.avif"
-          alt="table with pizzas"
-          class="fixedimg__img"
-        /> -->
-      </section>
+      <section class="form__container" id="form__container">
+        <h2 class="form__title">Online Ordering Form</h2>
+        <p class="form__subtitle">
+          Please fill out the form below to place your order for delivery or
+          pickup.
+        </p>
+        <p class="form__subtitle-smallprint">
+          Note we deliver only in Palma city area.
+        </p>
+        <form
+          class="form"
+          action="https://www.yourpizzeriawebsite.com/order.html"
+          method="post"
+        >
+          <section class="form__section form__left">
+            <label for="name" class="form__label">Name *</label>
+            <input
+              type="text"
+              name="name"
+              id="name"
+              class="form__input"
+              placeholder="Your name"
+              required
+            />
+            <label for="phone" class="form__label">Phone *</label>
+            <input
+              type="phone"
+              name="phone"
+              id="phone"
+              class="form__input"
+              placeholder="Your phone"
+              required
+            />
+            <label for="email" class="form__label">Email *</label>
+            <input
+              type="email"
+              name="email"
+              id="email"
+              class="form__input"
+              placeholder="Your email"
+              required
+            />
 
-      <section class="pizzeriainfo">
-        <h2 class="pizzeriainfo__title">Fetta di Beatitudine</h2>
-        <p class="pizzeriainfo__text">
-          At Fetta di Beatitudine, we believe in the magic of a perfect pizza.
-          Join us and discover the bliss in every slice, made with fresh
-          ingredients and Italian tradition.
+            <label for="address" class="form__label"
+              >Delivery Address *</label
+            >
+            <input
+              type="address"
+              name="address"
+              id="address"
+              class="form__input"
+              placeholder="Your address"
+              required
+            />
+
+            <label for="dropdown" class="form__label">Order type</label>
+            <select name="dropdown" id="dropdown" class="form__dropdown">
+              <option class="form__dropdown-option" value="delivery">
+                Delivery
+              </option>
+              <option class="form__dropdown-option" value="pickup">
+                Pickup
+              </option>
+            </select>
+          </section>
+
+          <section class="form__section form__right">
+            <h3 class="pizza__selection">Select your pizza</h3>
+            <label for="pizza" class="form__label">Pizza</label>
+            <select name="pizza" id="pizza" class="form__dropdown">
+              <option class="form__dropdown-option" value="salami">
+                Margherita
+              </option>
+              <option class="form__dropdown-option" value="pepperoni">
+                Pepperoni
+              </option>
+              <option class="form__dropdown-option" value="vegetarian">
+                Quattro Formaggi
+              </option>
+              <option class="form__dropdown-option" value="vegetarian">
+                Capricciosa
+              </option>
+              <option class="form__dropdown-option" value="vegetarian">
+                Vegetariana
+              </option>
+              <option class="form__dropdown-option" value="vegetarian">
+                Salame e Peperoni
+              </option>
+              <option class="form__dropdown-option" value="vegetarian">
+                Diavola
+              </option>
+              <option class="form__dropdown-option" value="vegetarian">
+                Truffle e Funghi
+              </option>
+              <option class="form__dropdown-option" value="vegetarian">
+                Prosciutto e Rucola
+              </option>
+              <option class="form__dropdown-option" value="vegetarian">
+                Fetta di Beatitudine Speciale
+              </option>
+            </select>
+            <label for="additional" class="form__label">Additional Ingredients</label>
+            <select name="additional" id="additional" class="form__dropdown">
+              <option class="form__dropdown-option" value="extra">
+                Extra Cheese
+              </option>
+              <option class="form__dropdown-option" value="extra2">
+                Extra Meat
+              </option>
+              <option class="form__dropdown-option" value="extra3">
+                Extra Toppings
+              </option>
+            </select>
+
+            <label for="more__items" class="form__label">Additional Items & Drinks</label>
+            <select name="more__items" id="more__items" class="form__dropdown">
+              <option class="form__dropdown-option" value="cola">
+                Coca Cola
+              </option>
+              <option class="form__dropdown-option" value="beer">Beer</option>
+              <option class="form__dropdown-option" value="smoothie">
+                Smoothie
+              </option>
+              <option class="form__dropdown-option" value="wine">Wine</option>
+            </select>
+          </section>
+
+          <section class="form__section form__bottom">
+            <h3 class="pizza__selection">Payment Options</h3>
+            <div class="cardwrapper">
+              <label for="card" class="form__label">Payment Method</label>
+              <select name="card" id="card" class="form__dropdown">
+                <option class="form__dropdown-option" value="cash">Cash</option>
+                <option class="form__dropdown-option" value="card">
+                  Credit Card
+                </option>
+                <option class="form__dropdown-option" value="paypal">
+                  PayPal
+                </option>
+              </select>
+
+            </div>
+            <button
+              class="pizza__order"
+              onclick="location.href='#form__container'"
+            >
+              Make an order
+            </button>
+          </section>
+        </form>
+        <p class="bottom__info">
+          Information about delivery areas, times, and payment options.
         </p>
       </section>
 
-      <section class="signaturepizza">
-        <article class="article__top">
-          <h3 class="top__title">Singature Pizzas</h3>
-          <p class="top__text">
-            Showcase a few of our most popular or unique pizzas with images and
-            descriptions.
-          </p>
-        </article>
-        <article class="article__bottom">
-          <img
-            src="./img/avif/pizza-salami&pepperoni1920x1920.avif"
-            alt="pizza salami and pepperoni"
-            class="bottom__img"
-          />
-          <article class="article__bottom-content">
-            
-            <h3 class="bottom__title">Salami and Pepperoni</h3>
-            <p class="bottom__text">
-              Featuring a generous layer of our homemade tomato sauce, this pizza
-              is topped with thin slices of rich, savory salami and spicy
-              pepperoni. Each bite delivers a perfect balance of meaty goodness
-              and a hint of heat, all atop our handcrafted, perfectly baked crust.
-              Finished with a blend of premium mozzarella and a sprinkle of fresh
-              herbs, it is a delightful treat for any pizza lover.
-            </p>
-          </article>
-        </article>
+      <section class="order__information">
+        <p>
+          We look forward to serving you soon! If you have any questions or need
+          assistance, please don't hesitate to contact us at +123-456-7890 or
+          email us at
+          <span class="order__information--bold"
+            >info@fettadibeatitudine.com.</span
+          >
+        </p>
       </section>
     </main>
 
     <!-- Include footer -->
     <!-- <div data-include="footer.html"></div> -->
 
-    <footer class="footer">
+    <footer class="footer" id="footer">
       <div class="footer__container">
         <a href="./index.html" class="footer__logo"
           ><img
